# django-envconfig

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  test.yml
envconfig/: __init__.py  dotenv.py  parser.py  setting_types.py  settings.py  utils.py
tests/: test_setting_types.py  test_utils.py  utils.py
