[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django-envconfig"
authors = [
    {name = "elyas", email = "elyas@ely.as"},
]
description = "Configure Django using environment variables."
requires-python = ">=3.7"
keywords = ["django"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
    "Framework :: Django",
    "Framework :: Django :: 1.11",
    "Framework :: Django :: 2.0",
    "Framework :: Django :: 2.1",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
]
dependencies = [
    "Django",
    "python-dotenv",
]
dynamic = ["version", "readme"]

[project.urls]
"Issue Tracker" = "https://github.com/ely-as/django-envconfig/issues"
"Source" = "https://github.com/ely-as/django-envconfig"

[tool.setuptools.dynamic]
version = {attr = "envconfig.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["envconfig"]

[tool.setuptools.package-data]
envconfig = ["py.typed"]

[project.optional-dependencies]
test = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov>=4.1",
    "pytest-mock",
    "ruff",
]

[tool.coverage.run]
omit = [
    "tests/*",
    # Coverage cannot parse settings.py
    "envconfig/settings.py",
]

[tool.mypy]
warn_unused_configs = true
files = [
    "envconfig/**/*.py",
    "tests/**/*.py",
]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[tool.ruff]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions and mccabe
]
fixable = [
    "I",     # isort
]
ignore = [
    "E501",  # line too long
]

[tool.ruff.mccabe]
max-complexity = 10
